# wmaker

./: .gitignore  INSTALL-WMAKER  Makefile.am  NEWS  configure.ac
WINGs/: Makefile.am  TODO  wcolor.c  wcolorpanel.c  wfont.c  widgets.c  wpopupbutton.c  wscroller.c  wslider.c  wtabview.c  wtexture.c  wview.c
WINGs/WINGs/: WINGs.h  WINGsP.h
WPrefs.app/: Appearance.c  FontSimple.c  WindowHandling.c
WindowMaker/: wmmacros.in
WindowMaker/Defaults/: Makefile.am
debian/: README.Debian  README.ppa  changelog  clean  control  copyright  gbp.conf  libwings-dev.install  libwings2.symbols  libwings3.install  libwings3.symbols  libwraster-dev.install  libwraster3.symbols  libwraster5.symbols  libwraster6.symbols  libwraster7.symbols  libwutil4.symbols  libwutil5.install  libwutil5.symbols  rules  wmaker-common.dirs  wmaker-common.docs  wmaker-common.examples  wmaker-common.install  wmaker-common.links  wmaker-common.lintian-overrides  wmaker-common.maintscript  wmaker-common.manpages  wmaker-utils.manpages  wmaker.docs  wmaker.install  wmaker.links  wmaker.manpages  wmaker.postinst
debian/debianfiles/: wmaker
debian/patches/: 10_libwraster6.diff  10_support_imagemagick6.diff  series  (+10 more)
distros/: WindowMaker-uk.po  wmaker-crm-next.spec
doc/: get-wings-flags.1  get-wraster-flags.1  get-wutil-flags.1  setstyle.1  wmaker.in  wmiv.1
src/: Makefile.am  WindowMaker.h  actions.c  balloon.c  defaults.c  defaults.h  dialog.c  event.c  framewin.c  icon.c  main.c  misc.c  moveres.c  screen.c  startup.c  wconfig.h.in  window.c  window.h  winspector.c
util/: setstyle.c  wmiv.c
(+9 files in other folders)
